Search and select address complete

--- a/courier_app/static/css/components/buttons.css
+++ b/courier_app/static/css/components/buttons.css
@@ -15,6 +15,10 @@
     justify-content: center;
     align-items: center;
 }
+.btn:disabled{
+    opacity: .8;
+    cursor: not-allowed;
+}
 .btn i{
     margin-right: 5px;
 }
