--- a/courier_app/static/css/styles.css
+++ b/courier_app/static/css/styles.css
@@ -18,6 +18,7 @@
 @import 'components/dropdown.css';
 @import 'components/forms.css';
 @import 'components/icon.css';
+@import 'components/list-group.css';
 @import 'components/modal.css';
 @import 'components/navbar.css';
 @import 'components/options.css';
