--- a/orders/templates/orders/detail.html
+++ b/orders/templates/orders/detail.html
@@ -3,165 +3,243 @@
 {% block title %}
 <title>Cuy Click Perú - {{ title }}</title>
 {% endblock title %}
+{% load static %}
+{% load l10n %}
 
-{% block content %}
+{% block content_head %}
 <div class="content-head">
-    <h4>{{ title }}</h4>
-    <a href="{% url 'drivers:create' %}" class="btn btn-link">
-    <span>Nuevo motorizado</span>
-    </a>
-</div>
-<div class="card mb-10">
-    
-        {% for field in form %}
-            <div class="form-group">
-            {{ field.label_tag }} 
-            {{ field }} 
-            {% if field.errors %}
-                <div class="text-invalid">{{ field.errors }}</div>
-            {% endif %}
-            </div>
-        {% endfor %}
-        <div class="actions right">
-        <a href="{% url 'orders:index' %}" class="btn btn-default">Cancelar</a>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+    <div class="left">
+        <a href="{% url 'orders:index' %}" class="btn btn-link btn-small">
+            <i class='bx bx-left-arrow-alt bx-sm'></i>
+        </a>
+        <h4>{{ title }}</h4>
     </div>
- 
 </div>
-<form method="post">
-    {% csrf_token %} 
-    <div class="flex mb-10 order-wrapper">
-        <div class="order-content">
-            <div class="card mb-6">
-                <h4 class="tracking-code"># TRACKING <span>CC000232</span></h4>
-                <div class="client-info">
+{% endblock %}
+{% block content %}
+<div class="mb-10">
+    <div class="card card-create-order create-order">
+        
+        <div class="order-content-2">
+            <div class="order-addresess-2">
+                <div>
                     <div>
-                        <h6>Juan Carlos Villalobos Rojas</h6>
-                        <p>DNI 70361125</p>
+                        <h5>
+                            # TRACKING {{ order.tracking_code }}
+                        </h5>
+                        {% include 'orders/snippets/status.html' %}
                     </div>
-                    <div>
-                        <h6>Celular</h6>
-                        <p>952415252</p>
-                    </div>
-                    <div>
-                        <h6>Dirección</h6>
-                        <p>Jr. Los pasajes 322</p>
+                    <div class="mt-2">
+                        <h6>Cliente: {{ order.client.full_name }}</h6>
+                        <p>Correo: {{ order.client.user.email }}</p>
                     </div>
                 </div>
-            </div>
-            <div class="card order-details">
-
-                <div class="order-details-head">
-                    <h4>Detalle del pedido</h4>
-                    <a href="#" class="link">Ver cálculo de tarifa</a>
-                </div>
-
-                <div class="order-details-content">
-
-                    <a href="#" class="btn btn-link btn-small">Agregar elemento de envío</a>
-
-                    <div class="order-details-item">
-
-                        <div class="actions right">
-                            <a href="#" class="btn btn-link btn-small">Ver detalle</a>
-                            <a href="#" class="btn btn-link btn-small">Editar</a>
-                            <a href="#" class="btn btn-link btn-small text-danger">Eliminar</a>
+                {% if order.detail_set.count > 0 %}
+                {% for detail in order.detail_set.all %}
+                
+                <div class="address-item">
+                    <div class="address-delivered">
+                        <div class="address-origin">
+                            <h6>{{ detail.address_origin.address }}</h6>
+                            <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
                         </div>
-
-                        <div class="address">   
-
-                            <div class="origin">
-                                <h5 class="m-0">Jr. Los Angeles 322</h5>
-                                <p class="mb-4">Jesús María, Lima</p>
-
-                                <h6>Referencia</h6>
-                                <p>A media cuadra del grifo hola.</p>
-                            </div>
-
-                            <i class='icon bx bx-right-arrow-alt bx-sm'></i> 
-
-                            <div class="destiny">
-                                <h5 class="m-0">Av. Brasil 432</h5>
-                                <p class="mb-2">Cercado, Lima</p>
-
-                                <h6>Referencia</h6>
-                                <p class="mb-2">Al lado la plaza central</p>
-
-                                <h6>Para</h6>
-                                <p>Josef Rojas Gutierrez</p>
-                            </div>
-
+                        <img class="order-icon" src="{% static 'icon/order-icon.svg' %}"/>
+                        <div class="address-destiny">
+                            <h6>{{ detail.address_destiny.address }}</h6>
+                            <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
                         </div>
-
-                        <div class="footer">
-                        
-                            <h5>Detalles del paquete</h5> 
-                            <div class="footer-details">
-                                <div class="package">
-                                    <a href="#" class="package-picture">
-                                        <img src="./media/logo.png" alt="Imagen del pago">
-                                    </a>
-                                    <div class="package-details">
-                                        <h6>Descripción</h6>
-                                        <p>1 caja - etiqueta con mis datos</p>
+                    </div>
+                    <div class="address-order-detail">
+                        <div class="collapse" x-data="{ isOpen: false }">
+                            <div class="collapse-title cursor-pointer" @click="isOpen = !isOpen">
+                                <h6>Detalles del pedido</h6>
+                                <i class='bx bx-chevron-down bx-sm' :class="{ 'bx-bx-rotate-180': isOpen }" ></i>
+                            </div>
+                            <div class="collapse-content" x-show.transition.in.scale.opacity.400ms.out.origin.top.scale.opacity.200ms="isOpen">
+                                <div class="client-info">
+                                    <h6 class="mb-2 subheading text-muted">Información del paquete</h6>
+                                    <div class="detail-package">
+                                        <div class="detail-package__row">
+                                          <h6>Tamaño</h6>
+                                          <p>{{ detail.size }}</p>
+                                        </div>
+                                        <div class="detail-package__row">
+                                          <h6>Contenido</h6>
+                                          <p>{{ detail.contain }}</p>
+                                        </div>
+                                        <div class="detail-package__row">
+                                          <h6>Valor</h6>
+                                          <p>{{ detail.value }}</p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="summary">
-                                    <div class="text-center">
-                                        <p>Distancia</p>
-                                        <h4>2.5KM</h4>
-                                    </div>
-                                    <div class="text-center tracking-price">
-                                        <p>Precio de tarifa</p>
-                                        <div class="price">
-                                            <span class="text-muted font-medium" style="margin-bottom: 5px; margin-right: 5px;">S/.</span>
-                                            <div class="h4 font-bold">
-                                                25
+                                <div class="footer-details mt-4">
+                                    <h6 class="mb-2 subheading text-muted">Detalles adicionales</h6>
+                                    <div class="package">
+                                        {% if detail.image %}
+                                        <div class="package-picture modal-container" x-data="{ isOpen: false }">
+                                            <div class="package-picture cursor-pointer" @click="isOpen = true">
+                                                <img src="{{ detail.image.url }}" alt="{{ detail.description }}">
                                             </div>
+                                            <div 
+                                                x-show.transition.in.scale.opacity.100ms.out.scale.opacity.100ms="isOpen"
+                                                class="modal">
+                                                <div 
+                                                    class="modal-content card" style="width: 600px" 
+                                                    @click.away="isOpen = false" 
+                                                >
+                                                    <div class="head">
+                                                        <h6>Imagen del paquete</h6>
+                                                        <div class="close">
+                                                            <button @click="isOpen = false" class="btn btn-default btn-circle btn-small">
+                                                                <i class='bx bx-x bx-sm' ></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-modal">
+                                                        <img src="{{ detail.image.url }}" style="width: 100%" alt="{{ detail.description }}">
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% else %}
+                                        <div class="package-picture">
+                                            <span class="text-muted text-small">Imagen no disponible</span>
+                                        </div>
+                                        {% endif %}
+                                        <div class="package-details">
+                                            <h6>Descripción</h6>
+                                            {% if detail.description %}
+                                                <p>{{ detail.description }}</p>
+                                            {% else %}
+                                                <p class="text-muted">Sin nota o descripción del paquete</p>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
+                    </div>                                
+                </div> 
+                <div class="address-order-summary">
+                    <div class="distance">
+                        <h5 class="m-0">{{ detail.distance|unlocalize }}  {% if detail.distance >= 1 %}KM{% else %}M{% endif %}</h5>
+                        <p class="text-small">Distancia</p>
                     </div>
+                    <div class="rate">
+                        <div class="price flex items-center">
+                            <span class="text-muted mr-1">S/.</span>
+                            <div class="h5 m-0">{{ detail.price_rate|unlocalize }}</div>
+                        </div>
+                        <p class="text-small m-0">Precio de tarifa</p>
+                    </div>
+                </div>
+                {% endfor %}
 
+                {% else %}
+                    <h5 class="text-muted text-center">No hay una dirección de envió para para este pedido.</h5>
+                    <div class="text-small text-center">Le aconsejamos agregar una dirección para continuar...</div>
+                {% endif %}
+            </div>
+            <div class="order-right">
+                <div class="order-total-2">
+                    <div class="order-row">
+                        <h class="text-muted">Subtotal</h>
+                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
+                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
+                            <span id="subtotal">{{ order.sub_total|unlocalize }}</span>
+                        </div>
+                    </div>
+                    <div class="order-row">
+                        <h6 class="text-muted">IGV</h6>
+                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
+                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
+                            <span id="igv">{{ order.igv|unlocalize }}</span>
+                        </div>
+                    </div>
+                    
+                    <div id="discount-wrapper" class="order-row" style="display: {% if order.promo_code %}grid;{% else %}none;{% endif %}">
+                        <h6 class="text-danger">Descuento</h6>
+                        <div class="price h6 font-semibold text-danger flex justity-end items-center m-0">
+                            <span class="text-base font-medium text-danger m-0 mr-1">-S/.</span>
+                            <span id="discount">{{ order.get_discount|unlocalize }}</span>
+                        </div>
+                    </div>
+                    <div id="total-previous-wrapper" class="order-row" style="display: {% if order.promo_code %}grid;{% else %}none;{% endif %}">
+                        <span class="font-medium text-danger text-small">Total anterior</span>
+                        <span class="font-medium text-right text-danger text-small" style="text-decoration: line-through">S/. <span id="total-previous">{{ order.get_total_previous|unlocalize }}</span></span> 
+                    </div>
+                    
+                    <div class="order-row mt-4">
+                        <h6 class="m-0">Total a pagar</h6>
+                        <div class="price h4 flex justity-end items-center">
+                            <span class="h6 text-muted m-0 mr-1">S/. </span>
+                            <span id="total">{{ order.total|unlocalize }}</span>
+                        </div>
+                        
+                    </div>
                 </div>
 
+                <div class="form-group mt-5">
+                    {% if order.promo_code %}
+                        <div class="mt-2 text-success">
+                            <p>{{ order.promo_code.code }}</p>
+                        </div>
+                    {% else %}
+                        <div class="mt-2 text-muted">
+                            Sin cupón de promoción aplicada
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="mt-5">
+                    <h6>Imágenes del pago realizado</h6>
+                    {% if order.image_payed %}
+                    <div class="package-picture modal-container" x-data="{ isOpen: false }">
+                        <div class="package-picture cursor-pointer" @click="isOpen = true">
+                            <img src="{{ order.image_payed.url }}" alt="{{ order.tracking_code }}">
+                        </div>
+                        <div 
+                            x-show.transition.in.scale.opacity.100ms.out.scale.opacity.100ms="isOpen"
+                            class="modal">
+                            <div 
+                                class="modal-content card" style="width: 600px" 
+                                @click.away="isOpen = false" 
+                            >
+                                <div class="head">
+                                    <h6>Imagen del pago</h6>
+                                    <div class="close">
+                                        <button @click="isOpen = false" class="btn btn-default btn-circle btn-small">
+                                            <i class='bx bx-x bx-sm' ></i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="form-modal">
+                                    <img src="{{ order.image_payed.url }}" style="width: 100%" alt="{{ order.image_payed }}">
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    {% else %}
+                    <div class="package-picture alert">
+                        <span class="text-muted text-small">Imagen pago no disponible</span>
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="mt-5">
+                    <h6>Tipo de comprobante</h6>
+                    <div class="mt-2 alert alert-primary">
+                        {{ order.type_ticket }}
+                    </div> 
+                </div>
             </div>
         </div>
-        <div class="order-total mb-10">
-            <div class="card">
-                <div class="text-right">
-                    <h5 class="m-0">Total a pagar</h5> 
-                    <div>
-                        <span class="h4 text-body font-medium">S/.</span>
-                        <span class="h2 font-bold">50<span/>
-                    </div>
-                </div>
-                <div class="order-total-payed">
-                    <div class="flex items-center justity-end mb-6">
-                        <a href="#" class="link">Ver forma de pago</a>
-                    </div>
-                    <h6 class="mb-2">Imagen del pago realizado</h6>
-                    <input type="file" name="payed_image" id="payed_image" class="input w-full">
-                    <a href="#" class="payed-image">
-                        <img src="./media/logo.png" alt="Imagen del pago">
-                    </a>
-
-                    <h6 class="mb-2 mt-4">Comprobante electrónico</h6>
-                    <select name="type_ticket" id="type_ticket" class="input w-full">
-                        <option value="factura">Factura</option>
-                        <option value="boleta">Boleta</option>
-                    </select>
-                </div>
-                <div class="actions full">
-                    <button class="btn btn-primary">Completar pedido</button>
-                    <a href="#" class="btn btn-default">Cancelar</a>
-                </div>
-            </div>
+        
+        <div class="mt-6 actions left">
+            <a href="{% url 'orders:index' %}" class="btn btn-default">Regresar</a>
         </div>
     </div>
- </form>
+</div>  
+</form>   
 {% endblock content %}
