--- a/static/css/pages/order-create.css
+++ b/static/css/pages/order-create.css
@@ -204,6 +204,23 @@
     grid-template-rows: auto;
     align-items: center;
 }
+.detail-package{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+}
+.detail-package__row{
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+    grid-template-rows: auto;
+    gap: 20px;
+}
+.detail-package__row p{
+    justify-self: end;
+    text-align: right;
+    font-weight: 500;
+}
 @media (min-width: 768px){
     .create-order{
         margin-left: 0px;
