--- a/templates/layouts/admin.html
+++ b/templates/layouts/admin.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     {% block styles %} {% endblock styles %}
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+    <script src="{% static 'vendors/alpinejs/js/alpine.min.js' %}"></script>
   </head>
   <body>
     
