--- a/templates/layouts/auth.html
+++ b/templates/layouts/auth.html
@@ -11,7 +11,7 @@
     <link href="{% static 'vendors/boxicons/css/boxicons.min.css' %}" rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+    <script src="{% static 'vendors/alpinejs/js/alpine.min.js' %}"></script>
   </head>
   <body>
     {% block content %} {% endblock content %}
