--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -77,7 +77,7 @@
                 <div x-show="!address_list.length" class="alert text-muted" x-text="emptyMessageText"></div>
                 <div class="actions right">
                   <a @click="isOpen = false" class="btn btn-default">Cancelar</a>
-                  <button type="button" :disabled="btnDisabled" class="btn btn-primary" @click="setChangeOriginAddress()">Elegir<button/>
+                  <button type="button" :disabled="btnDisabled" class="btn btn-primary" @click="setChangeOriginAddress()">Elegir</button>
                 </div>
               </div>
             </div>
@@ -160,6 +160,7 @@
   }
 
   function changePositionAddressOrigin(position, address_text) {
+    console.log('ldd')
     var originPositionInput = document.getElementsByName('origin_position')[0];
     if (typeof originPositionInput !== 'undefined') {
       originPositionInput.remove();
@@ -320,7 +321,8 @@
         this.btnDisabled = true;
         this.address_before = '';
         this.address_list.push(this.address_select);
-        var jsonPosition = JSON.parse(this.address_select.fields.address_gps);
+        var jsonPosition = this.address_select.fields.address_gps;
+        // JSON.parse(this.address_select.fields.address_gps);
         changePositionAddressOrigin(jsonPosition, this.getAddressText(this.address_select.fields));
         changeInfoAddressOrigin(this.address_select.fields);
       },
