--- a/drivers/templates/drivers/snippets/form.html
+++ b/drivers/templates/drivers/snippets/form.html
@@ -1,14 +1,14 @@
 {% load env_extras %}
-<div class="address__wrapper mb-4 container-modal" x-data="stateMap()" x-init="initMap()">
-    <div class="mb-4">
-        <div class="form-group-search m-0">
-            <input type="search" class="input input-outline" id="address_search" placeholder="Buscar mi dirección">
-            <i class="input-icon bx bx-search bx-sm"></i>
-        </div>
-        <input type="hidden" id="address_search_text">
+<div class="address__wrapper mb-2 container-modal">
+  <div class="mb-4">
+    <div class="form-group-search m-0">
+      <input type="search" class="input input-outline" id="address_search" placeholder="Buscar mi dirección">
+      <i class="input-icon bx bx-search bx-sm"></i>
     </div>
+    <input type="hidden" id="address_search_text">
+  </div>
 
-    <div class="mb-4">O</div>
+  <!-- <div class="mb-4">O</div>
     <div>
         <a class="btn btn-link btn-small btn-full" @click="isOpen = true">Elegir mi dirección en el mapa</a>
     </div>
@@ -36,33 +36,41 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
+</div>
+<div class="mb-4">
+  <h5>Nombre de usuario: {{ user.username }}</h5>
+  <p> Correo eletrónico: {{ user.email }}</p>
 </div>
 <form method="post" id="form-driver">
-{% csrf_token %} {% for field in form %}
-<div class="form-group">
+  {% csrf_token %} {% for field in form %}
+  <div class="form-group">
     {{ field.label_tag }} {{ field }}
     {% if field.errors %}
-    <div class="text-invalid">{{ field.errors }}</div>
+    {% for error in field.errors %}
+    <div class="text-invalid">
+      {{ error }}
+    </div>
+    {% endfor %}
     {% endif %}
-</div>
-{% endfor %}
-<div class="actions right">
+  </div>
+  {% endfor %}
+  <div class="actions right">
     <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
     <button type="submit" class="btn btn-primary">{{ btnText }}</button>
-</div>
+  </div>
 </form>
 
- <div id="key" data-value="{% get_env_var 'GOOGLE_MAP_KEY' %}"></div>
+<div id="key" data-value="{% get_env_var 'GOOGLE_MAP_KEY' %}"></div>
 {% block scripts %}
 <script>
-    (function(){
-        loadScript();
-    })()
+  (function () {
+    loadScript();
+  })()
   var form = document.querySelector('#form-driver');
-  function stateMap(){
-    return{
+  function stateMap() {
+    return {
       isOpen: false,
       address: {
         address_info: '',
@@ -71,13 +79,13 @@
           lng: 0
         }
       },
-      selectPosition(){
+      selectPosition() {
         changePositionAddress(this.address.position, this.address.address_info);
 
         this.isOpen = false;
-        
+
       },
-      geocodeLatLng(geocoder, map, infowindow){
+      geocodeLatLng(geocoder, map, infowindow) {
         geocoder.geocode({ location: this.address.position }, (results, status) => {
           if (status === "OK") {
             if (results[0]) {
@@ -97,72 +105,71 @@
           }
         });
       },
-      currentPosition(geocoder, infoWindow){
-       if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(
-              (position) => {
-                this.address = {
-                  position: {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude,
-                  }
-                };
-                map.setCenter(this.address.position);
-                window.address = this.address;
-                this.geocodeLatLng(geocoder, map, infoWindow);
-              },
-              () => {
-                handleLocationError(true, infoWindow, map.getCenter());
-              }
-            );
-          } else {
-            // Browser doesn't support Geolocation
-            handleLocationError(false, infoWindow, map.getCenter(), map);
-          } 
+      currentPosition(geocoder, infoWindow) {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(
+            (position) => {
+              this.address = {
+                position: {
+                  lat: position.coords.latitude,
+                  lng: position.coords.longitude,
+                }
+              };
+              map.setCenter(this.address.position);
+              window.address = this.address;
+              this.geocodeLatLng(geocoder, map, infoWindow);
+            },
+            () => {
+              handleLocationError(true, infoWindow, map.getCenter());
+            }
+          );
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter(), map);
+        }
       },
-      initMap(){
-          window.map = new google.maps.Map(document.getElementById('map'), {
-            center: this.address.position,
-            zoom: 17
-          });
-          const geocoder = new google.maps.Geocoder();
-          const infowindow = new google.maps.InfoWindow();
-          this.currentPosition(geocoder, infowindow);
-          
-          setDestination();
-          map.addListener("click", (mapsMouseEvent) => {
-            this.address.position = mapsMouseEvent.latLng,
+      initMap() {
+        window.map = new google.maps.Map(document.getElementById('map'), {
+          center: this.address.position,
+          zoom: 17
+        });
+        const geocoder = new google.maps.Geocoder();
+        const infowindow = new google.maps.InfoWindow();
+        this.currentPosition(geocoder, infowindow);
+
+        map.addListener("click", (mapsMouseEvent) => {
+          this.address.position = mapsMouseEvent.latLng,
             this.geocodeLatLng(geocoder, map, infowindow);
-          });
+        });
       },
     }
   }
-    function setDestination() {
-        var address_google = new google.maps.places.Autocomplete(document.getElementById('address_search'));
+  function setDestination() {
+    var address_google = new google.maps.places.Autocomplete(document.getElementById('address_search'));
 
-        google.maps.event.addListener(address_google, 'place_changed', function () {
-            var address = address_google.getPlace();
-            var address_text = address.formatted_address;
-            document.querySelector('#address_search_text').value = address_text;
-            changePositionAddress(address.geometry.location, address_text);
-        });
-    }
+    google.maps.event.addListener(address_google, 'place_changed', function () {
+      var address = address_google.getPlace();
+      var address_text = address.formatted_address;
+      document.querySelector('#address_search_text').value = address_text;
+      changePositionAddress(address.geometry.location, address_text);
+    });
+  }
 
-    function changePositionAddress(position, address_text){
-            var originPositionInput = document.getElementsByName('position')[0];
-            if (typeof originPositionInput !== 'undefined'){
-                originPositionInput.remove();
-            }
-            var origin_address_text = address_text;
-            var address = address_text.split(", ");
-            form.address.value = address[0];
-            form.district.value = address[1] + ', ' + address[2];
-            var inputPosition = document.createElement('input')
-            inputPosition.setAttribute("type", "hidden")
-            inputPosition.setAttribute("name", "position")
-            inputPosition.value = JSON.stringify(position);
-            form.references.after(inputPosition);
+  function changePositionAddress(position, address_text) {
+    var originPositionInput = document.getElementsByName('position')[0];
+    if (typeof originPositionInput !== 'undefined') {
+      originPositionInput.remove();
     }
+    var origin_address_text = address_text;
+    var address = address_text.split(", ");
+    form.address.value = address[0];
+    form.district.value = address[1] + ', ' + address[2];
+    var inputPosition = document.createElement('input')
+    inputPosition.setAttribute("type", "hidden")
+    inputPosition.setAttribute("name", "position")
+    inputPosition.value = JSON.stringify(position);
+    form.references.after(inputPosition);
+  }
 
   function handleLocationError(browserHasGeolocation, infoWindow, pos, map) {
     infoWindow.setPosition(pos);
@@ -173,27 +180,27 @@
     );
     infoWindow.open(map);
   }
-  function loadScript(){
-        // Create the script tag, set the appropriate attributes
-        var key = document.querySelector('#key');
-        var keyValue = key.dataset.value;
-        var script = document.createElement('script');
-        script.src = 'https://maps.googleapis.com/maps/api/js?libraries=places&key='+ keyValue +'&callback=initMap';
-        script.async = true;
+  function loadScript() {
+    // Create the script tag, set the appropriate attributes
+    var key = document.querySelector('#key');
+    var keyValue = key.dataset.value;
+    var script = document.createElement('script');
+    script.src = 'https://maps.googleapis.com/maps/api/js?libraries=places&key=' + keyValue + '&callback=initMap';
+    script.async = true;
 
-        // Attach your callback function to the `window` object
-        window.initMap = function() {
-          // JS API is loaded and available
-        };
+    // Attach your callback function to the `window` object
+    window.initMap = function () {
+      setDestination();
+    };
 
-        // Append the 'script' element to 'head'
-        document.head.appendChild(script);
-  } 
+    // Append the 'script' element to 'head'
+    document.head.appendChild(script);
+  }
 </script>
 <style>
-    #map{
-        width: 100%;
-        height: 400px;
-    }
+  #map {
+    width: 100%;
+    height: 400px;
+  }
 </style>
 {% endblock scripts %}
